[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-tunnel-cli"
version = "1.0.0"
description = "CLI for Cloudflare Tunnel ingress and DNS automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Konstant Ventures", email = "dev@konstant-ventures.com"}
]
keywords = ["cloudflare", "tunnel", "cloudflared", "dns", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
cloudflare-tunnel = "cloudflare_tunnel.cli:main"

[project.urls]
Homepage = "https://github.com/Konstant-Ventures/cloudflare-tunnel-cli"
Repository = "https://github.com/Konstant-Ventures/cloudflare-tunnel-cli"
Issues = "https://github.com/Konstant-Ventures/cloudflare-tunnel-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
